# RainyDesk

./: .gitattributes  .gitignore  LICENSE.txt  README.md  generate-matrix-font.html  package-lock.json  package.json  tsconfig.json  updates.json
.dev/: ROADMAP.md
rainscape-studio/: index.html
rainscape-studio/css/: studio.css
rainscape-studio/js/: main.js  ui.js  wiki_map.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  logging.rs  main.rs  platform.rs  rainscape.rs  tray.rs  types.rs  window_detector.rs  window_mgmt.rs
src-tauri/windows/: installer-hooks.nsh
src/main/: main.js  windowDetector.js
src/preload/: preload.js
src/renderer/: Canvas2DRenderer.js  USERHELP.md  audioSystem.js  background-renderer.js  background.html  help.css  help.html  help.ts  index.html  physicsSystem.js  rainscaper.css  rainscaper.html  rainscaper.js  rainydesk-panel.css  renderer-legacy.js  renderer.js  styles.css  tauri-api.js  tauri-api.ts
src/renderer/audio/: ArpeggioSequencer.ts  AudioBus.ts  AudioSystem.ts  BubbleSynthPool.ts  GlitchSynth.ts  ImpactSynthPool.ts  MaterialManager.ts  MatrixModule.ts  PhysicsMapper.ts  SheetLayer.ts  TextureLayer.ts  ThunderModule.ts  VoicePool.ts  WindModule.ts  index.ts
src/renderer/audio/worklets/: SampleAndHoldProcessor.js
src/renderer/fonts/: MatrixBitmapFont.fnt
src/renderer/rainscaper/: Rainscaper.ts  RainscaperState.ts  StateSync.ts  index.ts
src/renderer/rainscaper/components/: Header.ts  Panel.ts  PresetSelector.ts  StatsDisplay.ts  TabBar.ts
src/renderer/rainscaper/components/controls/: ControlGroup.ts  Select.ts  Slider.ts  Toggle.ts  index.ts
src/renderer/rainscaper/sections/: BubblePoolSection.ts  EffectsSection.ts  ImpactPoolSection.ts  MaterialSection.ts  PhysicsMapperSection.ts  PhysicsSection.ts  SheetLayerSection.ts  SystemSection.ts  UserPresets.ts  index.ts
src/renderer/rainscaper/styles/: animations.css  components.css  rainscaper.css  variables.css
src/renderer/rainydesk-panel/: RainyDeskPanel.ts  components.ts  index.ts  themes.ts  types.ts
src/renderer/simulation/: GridSimulation.ts  MatrixPixiRenderer.ts  RainPixiRenderer.ts  index.ts  types.ts
src/renderer/sounds/irs/: ir-manifest.json
src/renderer/webgl/: BackgroundRainShader.js  BackgroundRainShader.ts  WebGLRainRenderer.js  WebGLRainRenderer.ts  index.ts
src/types/: audio.ts  index.ts  physics.ts  rainscape.ts  webgl.ts
