[package]
name = "rainydesk"
version = "1.0.0"
description = "A peaceful desktop rain simulation"
authors = ["Sam Atwood"]
license = "BUSL-1.1"
repository = "https://github.com/XYAgainAgain/RainyDesk"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "rainydesk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }

# Windows-specific dependencies for window enumeration
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Registry"
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
