[package]
name = "rainydesk"
version = "0.8.5-alpha"
description = "A peaceful desktop rain simulation"
authors = ["Sam Atwood"]
license = "BUSL-1.1"
repository = "https://github.com/XYAgainAgain/RainyDesk"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "rainydesk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2"
# Updater plugin - check for updates from GitHub releases
# NOTE: Uncomment when ready for public release and set pubkey in tauri.conf.json
# tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
chrono = "0.4"
dirs = "5"
image = { version = "0.25", default-features = false, features = ["png"] }

# Windows-specific dependencies for window enumeration
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_System_Registry"
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# === Build profiles to reduce disk usage ===

[profile.dev]
# Minimal debug info (line numbers only, no variable inspection)
# Reduces .rlib/.pdb size from GBs to MBs
debug = "line-tables-only"
# Disable incremental compilation (saves ~2-3 GB of cache)
# Trade-off: slightly slower rebuilds, much smaller disk footprint
incremental = false

[profile.release]
# Strip symbols from release builds
strip = "symbols"
# Enable LTO for smaller binaries
lto = "thin"
